--- a/libbsm/au_class.3
+++ b/libbsm/au_class.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_class.3#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_class.3#6 $
 .\"
 .Dd April 19, 2005
 .Dt AU_CLASS 3
@@ -39,7 +39,7 @@
 .Sh LIBRARY
 .Lb libbsm
 .Sh SYNOPSIS
-.In libbsm.h
+.In bsm/libbsm.h
 .Ft "struct au_class_ent *"
 .Fn getauclassent void
 .Ft "struct au_class_ent *"
