--- a/libbsm/au_free_token.3
+++ b/libbsm/au_free_token.3
@@ -27,7 +27,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_free_token.3#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_free_token.3#6 $
 .\"
 .Dd April 19, 2005
 .Dt AU_FREE_TOKEN 3
@@ -38,7 +38,7 @@
 .Sh LIBRARY
 .Lb libbsm
 .Sh SYNOPSIS
-.In libbsm.h
+.In bsm/libbsm.h
 .Ft void
 .Fn au_free_token "token_t *tok"
 .Sh DESCRIPTION
