--- a/libbsm/au_mask.3
+++ b/libbsm/au_mask.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_mask.3#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_mask.3#6 $
 .\"
 .Dd April 19, 2005
 .Dt AU_MASK 3
@@ -36,7 +36,7 @@
 .Sh LIBRARY
 .Lb libbsm
 .Sh SYNOPSIS
-.In libbsm.h
+.In bsm/libbsm.h
 .Ft int
 .Fn au_preselect "au_event_t event" "au_mask_t *mask_p" "int sorf" "int flag"
 .Ft int
