--- a/libbsm/audit_submit.3
+++ b/libbsm/audit_submit.3
@@ -27,7 +27,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/audit_submit.3#10 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/audit_submit.3#11 $
 .\"
 .Dd May 29, 2006
 .Dt audit_submit 3
@@ -38,7 +38,7 @@
 .Sh LIBRARY
 .Lb libbsm
 .Sh SYNOPSIS
-.In stdio.h
+.In bsm/libbsm.h
 .Ft int
 .Fo audit_submit
 .Fa "short au_event" "au_id_t auid" "char status"
