--- a/libbsm/libbsm.3
+++ b/libbsm/libbsm.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/libbsm.3#10 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/libbsm.3#11 $
 .\"
 .Dd April 19, 2005
 .Dt LIBBSM 3
@@ -34,7 +34,7 @@
 .Sh LIBRARY
 .Lb libbsm
 .Sh SYNOPSIS
-.In libbsm.h
+.In bsm/libbsm.h
 .Sh DESCRIPTION
 The
 .Nm
