--- a/HISTORY
+++ b/HISTORY
@@ -3,6 +3,7 @@ OpenBSM 1.0 alpha 13
 - compat/clock_gettime.h now provides a compatibility implementation of
   clock_gettime(), which fixes building on Mac OS X.
 - Countless man page fixes.
+- praudit XML support via "praudit -x".
 
 OpenBSM 1.0 alpha 12
 
@@ -270,4 +271,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#42 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#43 $
