--- a/HISTORY
+++ b/HISTORY
@@ -4,6 +4,7 @@ OpenBSM 1.0 alpha 13
   clock_gettime(), which fixes building on Mac OS X.
 - Countless man page fixes.
 - praudit XML support via "praudit -x".
+- audit.log.5 expanded to include additional BSM token types.
 
 OpenBSM 1.0 alpha 12
 
@@ -271,4 +272,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#43 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#44 $
