--- a/HISTORY
+++ b/HISTORY
@@ -5,6 +5,8 @@ OpenBSM 1.0 alpha 13
 - Countless man page fixes.
 - praudit XML support via "praudit -x".
 - audit.log.5 expanded to include additional BSM token types.
+- Added encoding and decoding routines for process64_ex, process32_ex, and
+  subject32_ex tokens.
 
 OpenBSM 1.0 alpha 12
 
@@ -272,4 +274,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#44 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#45 $
