--- a/HISTORY
+++ b/HISTORY
@@ -2,11 +2,13 @@ OpenBSM 1.0 alpha 13
 
 - compat/clock_gettime.h now provides a compatibility implementation of
   clock_gettime(), which fixes building on Mac OS X.
-- Countless man page fixes.
-- praudit XML support via "praudit -x".
+- Countless man page improvements, markup fixes, content fixs, etc.
+- XML printing support via "praudit -x".
 - audit.log.5 expanded to include additional BSM token types.
-- Added encoding and decoding routines for process64_ex, process32_ex, and
-  subject32_ex tokens.
+- Added encoding and decoding routines for process64_ex, process32_ex,
+  subject32_ex, header64, and attr64 tokens.
+- Additional audit event identifiers for listen, mlockall/munlockall,
+  getpath, POSIX message queues, and mandatory access control.
 
 OpenBSM 1.0 alpha 12
 
@@ -274,4 +276,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#45 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#46 $
