--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+OpenBSM 1.0 alpha 14
+
 OpenBSM 1.0 alpha 13
 
 - compat/clock_gettime.h now provides a compatibility implementation of
@@ -276,4 +278,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#46 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#47 $
