--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,7 @@
 OpenBSM 1.0 alpha 14
 
+- gcc41 warnings clean.
+
 OpenBSM 1.0 alpha 13
 
 - compat/clock_gettime.h now provides a compatibility implementation of
@@ -278,4 +280,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#47 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#48 $
