--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,7 @@
 OpenBSM 1.0 alpha 14
 
+- Fix endian issues when processing IPv6 addresses for extended subject
+  and process tokens.
 - gcc41 warnings clean.
 
 OpenBSM 1.0 alpha 13
@@ -280,4 +282,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#48 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#49 $
