--- a/libbsm/au_user.3
+++ b/libbsm/au_user.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_user.3#9 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_user.3#10 $
 .\"
 .Dd April 19, 2005
 .Dt AU_USER 3
@@ -114,15 +114,16 @@ for the user identified by
 .Fa username .
 If the user audit configuration is not found, the default system audit
 properties returned by
-.Xr getacflg 3 .
+.Xr getacflg 3
+are used.
 The resulting mask may be set via a call to
 .Xr setaudit 2
 or related variants.
 .Pp
 The
 .Fn getfauditflags
-function
-XXXXXXXXXXXXXXXXX
+function generates a new process audit state by combining the audit masks
+passed as parameters with the system audit masks.
 .Sh SEE ALSO
 .Xr setaudit 2 ,
 .Xr getacflg 3 ,
