--- a/HISTORY
+++ b/HISTORY
@@ -3,6 +3,8 @@ OpenBSM 1.0 alpha 14
 - Fix endian issues when processing IPv6 addresses for extended subject
   and process tokens.
 - gcc41 warnings clean.
+- Teach audit_submit(3) about getaudit_addr(2).
+- Add support for zonename tokens.
 
 OpenBSM 1.0 alpha 13
 
@@ -282,4 +284,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#49 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#50 $
