Add man page references to au_to_zonename(3).
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 118230]

--- a/libbsm/libbsm.3
+++ b/libbsm/libbsm.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/libbsm.3#11 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/libbsm.3#12 $
 .\"
 .Dd April 19, 2005
 .Dt LIBBSM 3
@@ -177,7 +177,8 @@ representation:
 .Xr au_to_subject32_ex 3 ,
 .Xr au_to_subject64_ex 3 ,
 .Xr au_to_text 3 ,
-.Xr au_to_trailer 3 .
+.Xr au_to_trailer 3 ,
+.Xr au_to_zonename 3 .
 .Ss Audit User Interfaces
 Audit user interfaces support the look up of information from the
 .Xr audit_user 5
