--- a/libbsm/au_token.3
+++ b/libbsm/au_token.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_token.3#11 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_token.3#12 $
 .\"
 .Dd April 19, 2005
 .Dt AU_TOKEN 3
@@ -72,7 +72,8 @@
 .Nm au_to_header ,
 .Nm au_to_header32 ,
 .Nm au_to_header64 ,
-.Nm au_to_trailer
+.Nm au_to_trailer ,
+.Nm au_to_zonename
 .Nd "routines for generating BSM audit tokens"
 .Sh LIBRARY
 .Lb libbsm
@@ -196,6 +197,8 @@
 .Fn au_to_header64 "int rec_size" "au_event_t e_type" "au_emod_t e_mod"
 .Ft "token_t *"
 .Fn au_to_trailer "int rec_size"
+.Ft "token_t *"
+.Fn au_to_zonename "char *zonename"
 .Sh DESCRIPTION
 These interfaces support the allocation of BSM audit tokens, represented by
 .Vt token_t ,
