--- a/libbsm/au_token.3
+++ b/libbsm/au_token.3
@@ -1,5 +1,5 @@
 .\"-
-.\" Copyright (c) 2005 Robert N. M. Watson
+.\" Copyright (c) 2005-2007 Robert N. M. Watson
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_token.3#12 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_token.3#13 $
 .\"
 .Dd April 19, 2005
 .Dt AU_TOKEN 3
