--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+OpenBSM 1.0 alpha 15
+
+- Fix bug when processing in_addr_ex tokens.
+- Restore the behavior of printing the string/text specified while
+  auditing arg32 tokens.
+
 OpenBSM 1.0 alpha 14
 
 - Fix endian issues when processing IPv6 addresses for extended subject
@@ -5,9 +11,6 @@ OpenBSM 1.0 alpha 14
 - gcc41 warnings clean.
 - Teach audit_submit(3) about getaudit_addr(2).
 - Add support for zonename tokens.
-- Fix bug when processing in_addr_ex tokens.
-- Restore the behavior of printing the string/text specified while
-  auditing arg32 tokens.
 
 OpenBSM 1.0 alpha 13
 
@@ -287,4 +290,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#51 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#52 $
