--- a/HISTORY
+++ b/HISTORY
@@ -3,6 +3,8 @@ OpenBSM 1.0 alpha 15
 - Fix bug when processing in_addr_ex tokens.
 - Restore the behavior of printing the string/text specified while
   auditing arg32 tokens.
+- Synchronized audit event list to Solaris, picking up the *at(2) system call
+  definitions, now required for FreeBSD and Linux.
 
 OpenBSM 1.0 alpha 14
 
@@ -290,4 +292,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#52 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#53 $
