--- a/HISTORY
+++ b/HISTORY
@@ -4,7 +4,8 @@ OpenBSM 1.0 alpha 15
 - Restore the behavior of printing the string/text specified while
   auditing arg32 tokens.
 - Synchronized audit event list to Solaris, picking up the *at(2) system call
-  definitions, now required for FreeBSD and Linux.
+  definitions, now required for FreeBSD and Linux.  Added additional events
+  for *at(2) system calls not present in Solaris.
 
 OpenBSM 1.0 alpha 14
 
@@ -292,4 +293,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#53 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#54 $
