--- a/HISTORY
+++ b/HISTORY
@@ -6,6 +6,8 @@ OpenBSM 1.0 alpha 15
 - Synchronized audit event list to Solaris, picking up the *at(2) system call
   definitions, now required for FreeBSD and Linux.  Added additional events
   for *at(2) system calls not present in Solaris.
+- Bugs in auditreduce(8) fixed allowing partial date strings to be used in
+  filtering events.
 
 OpenBSM 1.0 alpha 14
 
@@ -293,4 +295,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#54 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#55 $
