--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+OpenBSM 1.0 alpha 1
+
 OpenBSM 1.0
 
 - Fix bug in auditreduce(8) which resulted in a memory fault/crash when
@@ -302,4 +304,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#57 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#58 $
