Reflect Mac OS X 10.5.1 build support, credit Eric Hall, update some references to OpenBSM 1.0 to instead reference OpenBSM 1.1.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 134374]

--- a/HISTORY
+++ b/HISTORY
@@ -5,6 +5,7 @@ OpenBSM 1.1 alpha 1
 - Fix bug in audit_write() where we commit an incomplete record in the
   event there is an error writing the subject token.  This was submitted
   by Diego Giagio.
+- Build support for Mac OS X 10.5.1 submitted by Eric Hall.
 
 OpenBSM 1.0
 
@@ -310,4 +311,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#62 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#63 $
