--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-OpenBSM 1.0
+OpenBSM 1.1
 
   Introduction
 
@@ -90,6 +90,7 @@ the development of OpenBSM:
     Martin Voros
     Diego Giagio
     Alex Samorukov
+    Eric Hall
 
 In addition, Coverity, Inc.'s Prevent(tm) static analysis tool and Gimpel
 Software's FlexeLint tool were used to identify a number of bugs in the
@@ -111,4 +112,4 @@ Information on TrustedBSD may be found on the TrustedBSD home page:
 
     http://www.TrustedBSD.org/
 
-$P4: //depot/projects/trustedbsd/openbsm/README#24 $
+$P4: //depot/projects/trustedbsd/openbsm/README#25 $
