--- a/HISTORY
+++ b/HISTORY
@@ -6,6 +6,9 @@ OpenBSM 1.1 alpha 1
   event there is an error writing the subject token.  This was submitted
   by Diego Giagio.
 - Build support for Mac OS X 10.5.1 submitted by Eric Hall.
+- Fix a bug which resulted in host XML attributes not being printed
+  while processing extended header tokens.  This patch was submitted by
+  Martin Voros.
 
 OpenBSM 1.0
 
@@ -311,4 +314,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#63 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#64 $
