--- a/HISTORY
+++ b/HISTORY
@@ -9,6 +9,8 @@ OpenBSM 1.1 alpha 1
 - Fix a bug which resulted in host XML attributes not being printed
   while processing extended header tokens.  This patch was submitted by
   Martin Voros.
+- Constification of function arguments so that const strings can be passed
+  as arguments to tokens.  This patch was submitted by Xin LI.
 
 OpenBSM 1.0
 
@@ -314,4 +316,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#64 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#65 $
