--- a/README
+++ b/README
@@ -91,6 +91,7 @@ the development of OpenBSM:
     Diego Giagio
     Alex Samorukov
     Eric Hall
+    Xin LI
 
 In addition, Coverity, Inc.'s Prevent(tm) static analysis tool and Gimpel
 Software's FlexeLint tool were used to identify a number of bugs in the
@@ -112,4 +113,4 @@ Information on TrustedBSD may be found on the TrustedBSD home page:
 
     http://www.TrustedBSD.org/
 
-$P4: //depot/projects/trustedbsd/openbsm/README#25 $
+$P4: //depot/projects/trustedbsd/openbsm/README#26 $
