--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+- Modify the -m option so users can select more then one audit event.
+
 OpenBSM 1.1 alpha 1
 
 - Add option to auditreduce(1) which allows users to invert sense of
@@ -316,4 +318,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#65 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#66 $
