--- a/README
+++ b/README
@@ -92,6 +92,7 @@ the development of OpenBSM:
     Alex Samorukov
     Eric Hall
     Xin LI
+    Stacey Son
 
 In addition, Coverity, Inc.'s Prevent(tm) static analysis tool and Gimpel
 Software's FlexeLint tool were used to identify a number of bugs in the
@@ -113,4 +114,4 @@ Information on TrustedBSD may be found on the TrustedBSD home page:
 
     http://www.TrustedBSD.org/
 
-$P4: //depot/projects/trustedbsd/openbsm/README#26 $
+$P4: //depot/projects/trustedbsd/openbsm/README#27 $
