--- a/man/setaudit.2
+++ b/man/setaudit.2
@@ -1,29 +1,24 @@
-.\"-
-.\" Copyright (c) 2005 Robert N. M. Watson
-.\" All rights reserved.
 .\"
-.\" Redistribution and use in source and binary forms, with or without
-.\" modification, are permitted provided that the following conditions
-.\" are met:
-.\" 1. Redistributions of source code must retain the above copyright
-.\"    notice, this list of conditions and the following disclaimer.
-.\" 2. Redistributions in binary form must reproduce the above copyright
-.\"    notice, this list of conditions and the following disclaimer in the
-.\"    documentation and/or other materials provided with the distribution.
+.\" Copyright (c) 2008 Apple Inc. All rights reserved.
 .\"
-.\" THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND
-.\" ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-.\" IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
-.\" ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE
-.\" FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
-.\" DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
-.\" OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
-.\" HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
-.\" LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
-.\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
-.\" SUCH DAMAGE.
-.\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/setaudit.2#8 $
+.\" @APPLE_LICENSE_HEADER_START@
+.\" 
+.\" This file contains Original Code and/or Modifications of Original Code
+.\" as defined in and that are subject to the Apple Public Source License
+.\" Version 2.0 (the 'License'). You may not use this file except in
+.\" compliance with the License. Please obtain a copy of the License at
+.\" http://www.opensource.apple.com/apsl/ and read it before using this
+.\" file.
+.\" 
+.\" The Original Code and all software distributed under the License are
+.\" distributed on an 'AS IS' basis, WITHOUT WARRANTY OF ANY KIND, EITHER
+.\" EXPRESS OR IMPLIED, AND APPLE HEREBY DISCLAIMS ALL SUCH WARRANTIES,
+.\" INCLUDING WITHOUT LIMITATION, ANY WARRANTIES OF MERCHANTABILITY,
+.\" FITNESS FOR A PARTICULAR PURPOSE, QUIET ENJOYMENT OR NON-INFRINGEMENT.
+.\" Please see the License for the specific language governing rights and
+.\" limitations under the License.
+.\" 
+.\" @APPLE_LICENSE_HEADER_END@
 .\"
 .Dd April 19, 2005
 .Dt SETAUDIT 2
@@ -100,8 +95,8 @@ process. It is defined as follows:
 .in +4n
 
 struct au_tid {
-	dev_t port;
-	u_int32_t machine;
+	dev_t           port;
+	u_int32_t       machine;
 };
 typedef struct au_tid   au_tid_t;
 
@@ -124,13 +119,12 @@ in IP version 6.  It is defined as follows:
 .in +4n
 
 struct auditinfo_addr {
-        au_id_t         ai_auid;        /* Audit user ID. */
-        au_mask_t       ai_mask;        /* Audit masks. */
-        au_tid_addr_t   ai_termid;      /* Terminal ID. */
-        au_asid_t       ai_asid;        /* Audit session ID. */
+	au_id_t         ai_auid;        /* Audit user ID. */
+	au_mask_t       ai_mask;        /* Audit masks. */
+	au_tid_addr_t   ai_termid;      /* Terminal ID. */
+	au_asid_t       ai_asid;        /* Audit session ID. */
 };
 typedef struct auditinfo_addr   auditinfo_addr_t;
-
 .in
 .fi
 .Pp
@@ -142,9 +136,9 @@ field with the type of address stored:
 .in +4n
 
 struct au_tid_addr {
-        dev_t           at_port;
-        u_int32_t       at_type;
-        u_int32_t       at_addr[4];
+	dev_t           at_port;
+	u_int32_t       at_type;
+	u_int32_t       at_addr[4];
 };
 typedef struct au_tid_addr      au_tid_addr_t;
 .in
@@ -155,11 +149,14 @@ These system calls require an appropriate privilege to complete.
 .Rv -std setaudit setaudit_addr
 .Sh ERRORS
 .Bl -tag -width Er
+.It Bq Er EFAULT
+A failure occurred while data transferred to or from
+the kernel failed.
+.It Bq Er EINVAL
+Illegal argument was passed by a system call.
 .It Bq Er EPERM
-The caller does not possess the appropriate privileges.
-.TP
-.It Bq Er EFAULT/EINVAL
-Invalid argument.
+The process does not have sufficient permission to complete
+the operation.
 .El
 .Sh SEE ALSO
 .Xr audit 2 ,
