--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-OpenBSM 1.1
+OpenBSM 1.1 alpha 1
 
   Introduction
 
@@ -114,4 +114,4 @@ Information on TrustedBSD may be found on the TrustedBSD home page:
 
     http://www.TrustedBSD.org/
 
-$P4: //depot/projects/trustedbsd/openbsm/README#27 $
+$P4: //depot/projects/trustedbsd/openbsm/README#28 $
