Add one-line headers to most remaining text files for consistency.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 145800]

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+OpenBSM TODO
+
 - Build a regression test suite for libbsm that generates each token
   type and then compares the results with known good data.  Make sure to
   test that things work properly with respect to endianness of the local
@@ -19,4 +21,4 @@
 - Allow the path /etc/security to be configured at configure-time so that
   alternative locations can be used.
 
-$P4: //depot/projects/trustedbsd/openbsm/TODO#10 $
+$P4: //depot/projects/trustedbsd/openbsm/TODO#11 $
