--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+OpenBSM Version History
+
 OpenBSM 1.1 alpha 1
 
 - Add option to auditreduce(1) which allows users to invert sense of
@@ -320,4 +322,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#68 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#69 $
