--- a/NEWS
+++ b/NEWS
@@ -23,7 +23,7 @@ OpenBSM 1.0
 
 - Fix bug in auditreduce(1) which resulted in a memory fault/crash when
   the user specified an event name with -m.
-- Remove AU_.* hard-coded audit class constants, as udit classes are now
+- Remove AU_.* hard-coded audit class constants, as audit classes are now
   entirely dynamically configured using /etc/security/audit_class.
 
 OpenBSM 1.0 alpha 15
@@ -323,4 +323,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#2 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#3 $
