--- a/README
+++ b/README
@@ -16,12 +16,13 @@ may be found in the FreeBSD and Mac OS X kernels.
 OpenBSM consists of several directories:
 
     bin/           Audit-related command line tools
-    bsm/           System include files for BSM
+    bsm/           Library include files for BSM
     compat/        Compatibility code to build on various OS's
     etc/           Sample /etc/security configuration files
     libbsm/        Implementation of BSM library interfaces and man pages
     man/           System call and configuration file man pages
     modules/       Directory for auditfilterd module source
+    sys/           System include files for BSM
     test/          Test token sets and geneneration program
     tools/         Tool directory, including audump to dump databases
 
@@ -54,4 +55,4 @@ Information on TrustedBSD may be found on the TrustedBSD home page:
 
     http://www.TrustedBSD.org/
 
-$P4: //depot/projects/trustedbsd/openbsm/README#31 $
+$P4: //depot/projects/trustedbsd/openbsm/README#32 $
