Correct directory in installation instructions.
Submitted by:	Todd Heberlein <todd_heberlein at mac dot com>

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 148046]

--- a/INSTALL
+++ b/INSTALL
@@ -24,6 +24,6 @@ directory the correct libbsm is used:
     make install
     LD_LIBRARY_PATH=/home/rwatson/openbsm/libbsm ; export LD_LIBRARY_PATH
 
-You will need to manually propagate openbsm/etc/* into /etc on your system;
-this is not done automatically so as to avoid disrupting the current
+You will need to manually propagate openbsm/etc/* into /etc/security on your
+system; this is not done automatically so as to avoid disrupting the current
 configuration.  Currently, the locations of these files is not configurable.
