Remove (and don't use) compatibility token constant names that were inherited from Darwin; always prefer the BSM token names (AUT_*).
Synchronize our token type list to the BSM token type list -- add 
one or two we didn't have, replace one that was in conflict, remove
one or two Trusted Solaris ones that don't appear to be mainstream
(and that we didn't implement anyway).

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 150964]

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,8 @@ OpenBSM 1.1 alpha 2
   Submitted by Stacey Son.
 - Various strcpy()'s/strcat()'s have been changed to strlcpy()'s/strlcat()'s
   or asprintf().  Added compat/strlcpy.h for Linux.
+- Remove compatibility defines for old Darwin token constant names; now only
+  BSM token names are provided and used.
 
 OpenBSM 1.1 alpha 1
 
@@ -339,4 +341,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/NEWS#6 $
+$P4: //depot/projects/trustedbsd/openbsm/NEWS#7 $
